so far, horizontal scroll is not invoked anymore, even at 150px nothing is overflowing, fixed a couple tokens, must check a bit more about the relative color syntax documentation, fixed iframe, embeded and object url from the index.tsx page as they were calling for a file that does not exists, fixed it by replacing 'index.html' for '/'

--- a/app/static/styles/lilycat.normalize.css
+++ b/app/static/styles/lilycat.normalize.css
@@ -53,62 +53,28 @@
   width: 100%;
 }
 
-:where(
-  ul,
-  ol,
-  li
-) {
-  padding: revert;
-}
-
 html {
   background-color: var(--clr-surface);
   color: var(--clr-content);
 }
 
 a {
-  color: var(--clr-accent--3);
+  color: var(--clr-accent);
+  transition: color;
+
+  &:visited {
+    color: var(--clr-context);
+  }
 
   &:focus {
-    color: var(--clr-accent--1);
+    color: hsl(from var(--clr-accent) h calc(s + 5%) l);
   }
 
   &:hover {
-    color: var(--clr-accent--2);
+    color: color-mix(in hsl, var(--clr-accent), white 25%);
   }
 
   &:active {
-    color: var(--clr-accent--4);
+    color: color-mix(in hsl, var(--clr-accent), black 25%);
   }
-}
-
-a:visited {
-  color: var(--clr-context--3);
-
-  &:focus {
-    color: var(--clr-context--1);
-  }
-
-  &:hover {
-    color: var(--clr-context--2);
-  }
-
-  &:active {
-    color: var(--clr-context--4);
-  }
-}
-
-/* for demo */
-stack {
-  display: flex;
-  gap: 10pt;
-
-  &[axis~="--y"] {
-    flex-direction: column;
-  }
-}
-
-group {
-  display: inherit;
-  flex-direction: inherit;
 }
