--- a/app/static/styles/lilycat.reset.css
+++ b/app/static/styles/lilycat.reset.css
@@ -1,3 +1,8 @@
+:root {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 * {
   accent-color: var(--clr-accent);
   box-sizing: border-box;
@@ -7,21 +12,26 @@
   margin: 0;
   max-width: 100%;
   min-height: 0;
-  outline: 0;
+  min-inline-size: 0;
+  outline: none;
   padding: 0;
   position: relative;
   /* text-box: trim-both ex alphabetic; */
-  text-decoration: none;
   z-index: auto;
 
-  &::after, &::before {
+  &::after,
+  &::before {
     accent-color: var(--clr-accent);
     box-sizing: inherit;
     clear: both;
   }
 }
 
-html {
+:where(#root, #__next) {
+  isolation: isolate;
+}
+
+:where(html) {
   display: contents;
   font-family: sans-serif;
   font-size: clamp(15px, 100dvw, 15pt);
@@ -30,7 +40,7 @@ html {
   line-height: 1.2em;
   position: static;
 
-  & > body {
+  & > :where(body) {
     background-color: var(--clr-surface);
     inset: 0;
     min-height: 100dvh;
@@ -39,18 +49,70 @@ html {
   }
 }
 
-:where(h1, h2, h3, h4, h5, h6) {
-  line-height: clamp(100%, 115%, 125%);
+:where(
+  form,
+  fieldset,
+  div,
+  span,
+  details,
+  summary,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  caption,
+  figcaption,
+  ul,
+  ol,
+  li,
+  p,
+  button,
+  input,
+  select,
+  textarea,
+  pre
+) {
   overflow-wrap: break-word;
-  text-wrap: balance;
-}
-
-:where(caption, figcaption, li, p) {
-  overflow-wrap: break-word;
-  text-wrap: pretty;
+  text-overflow: ellipsis;
   word-break: break-word;
-}
 
-:where(#root, #__next) {
-  isolation: isolate;
+  &:is(h1, h2, h3, h4, h5, h6) {
+    line-height: clamp(100%, 115%, 125%);
+    text-wrap: balance;
+  }
+
+  &:is(caption, figcaption, li, p) {
+    text-wrap: pretty;
+  }
+
+  &:is(pre) {
+    white-space: pre-line;
+  }
+
+  &:is(button, input, select, textarea) {
+    overflow: clip;
+    white-space: nowrap;
+  }
+
+  &:is(textarea) {
+    width: 100%;
+  }
+
+  &:is(
+    ul,
+    ol
+  ) {
+    list-style-position: inside;
+    padding-left: 0.5em;
+  }
+
+  &:is(ul) {
+    & > :where(li) {
+      &::marker {
+        content: "• ";
+      }
+    }
+  }
 }
